[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["qiaopengjun5162 <qiaopengjun5162@gmail.com>"]
repository = "https://github.com/qiaopengjun5162/pinocchio-escrow-workspace"
description = "A comprehensive Solana monorepo featuring multiple Escrow program implementations using the lightweight Pinocchio framework."

[workspace]
# 这里定义你的子项目路径
members = [
  "programs/pinocchio_escrow",        # 最新版
  "programs/solana_pinocchio_escrow", # 旧版
]
resolver = "2"
