cargo-features = ["edition2024"]

[package]
name = "pinocchio_escrow"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["qiaopengjun5162 <qiaopengjun5162@gmail.com>"]
repository = "https://github.com/qiaopengjun5162/pinocchio-escrow-workspace"
description = "A comprehensive Solana monorepo featuring multiple Escrow program implementations using the lightweight Pinocchio framework."

[lib]
crate-type = ["lib", "cdylib"]
name = "pinocchio_escrow"


[dependencies]
pinocchio = "0.10.1"
pinocchio-associated-token-account = "0.3.0"
pinocchio-system = "0.5.0"
pinocchio-token = "0.5.0"
solana-address = { version = "2.1.0", features = ["curve25519"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(target_os, values("solana"))',
] }
